# stanford-ssg-research

./: .gitignore  LABNOTES.md  LICENSE  README.md  REFERENCES.tex  stanford-ssg-research.code-workspace
libs/llm_programs/: README.md  pyproject.toml
libs/llm_programs/docker/: Dockerfile  run.sh
libs/llm_programs/llm_programs/: models.py  sanity.py  utils.py
libs/llm_programs/llm_programs/cli/: gen.py
libs/llm_programs/llm_programs/llms/: huggingface_pipeline.py
libs/llm_programs/llm_programs/notebooks/: data-exploration.ipynb  experiment-results.ipynb
libs/llm_programs/llm_programs/prompts/: __init__.py  base.py  gsm8k.py
libs/llm_programs/llm_programs/tasks/: __init__.py  base.py  cli.py  gsm8k.py  run.py
libs/llm_programs/wizart/agent/: base.py  tools.py
libs/llm_programs/wizart/tasks/: __init__.py  base.py  gsm8k.py  run.py
libs/wizart/: LICENSE  README.md  pyproject.toml
libs/wizart/wizart/: model.py
libs/wizart/wizart/agent/: base.py  parser.py  tools.py
libs/wizart/wizart/prompts/: gsm8k.py  gsmk8.py
libs/wizart/wizart/tasks/: __init__.py  base.py  gsm8k.py  run.py
