[tool.poetry]
name = "llm_programs"
version = "0.1.0"
description = "llm_programs: Benchmark and lab environment for Large Language Models (LLMs) capable of learning to use tools."
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
readme = "README.md"
packages = [{ include = "llm_programs" }]

[tool.poetry.dependencies]
python = "^3.11"
transformers = { extras = ["torch"], version = "^4.34.0" }
click = "^8.1.7"
pydantic = "^2.4.2"
sentencepiece = "^0.1.99"
protobuf = "^4.24.4"
torch = "^2.1.0"
nvidia-cuda-runtime-cu12 = "^12.2.140"
nvidia-cublas-cu12 = "^12.2.5.6"
nvidia-nvml-dev-cu12 = "^12.2.140"
nvidia-cudnn-cu12 = "^8.9.4.25"
nvidia-cuda-cupti-cu12 = "^12.2.142"
nvidia-cufft-cu12 = "^11.0.8.103"
nvidia-curand-cu12 = "^10.3.3.141"
nvidia-cusolver-cu12 = "^11.5.2.141"
nvidia-cuda-nvcc-cu12 = "^12.2.140"
nvidia-cuda-opencl-cu12 = "^12.2.140"
nvidia-nccl-cu12 = "^2.18.3"
nvidia-nvtx-cu12 = "^12.2.140"
datasets = "^2.14.5"
accelerate = "^0.24.0"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"
langchain = "^0.0.325"
evaluate = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']

# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["src"]
skip = [".venv/"]

# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
