[tool.poetry]
name = "wizart"
version = "0.1.0"
description = "WizART: WizardLLM with Automatic multi-step Reasoning and Tool-use (ART)."
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
readme = "README.md"
packages = [{ include = "poetry_demo" }]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']

# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["src"]
skip = [".venv/"]

# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
